welcome.lessons.welcome.array.array667.Array667.scala.error
array667:11: error: illegal start of simple expression
	    if(nums(indexOfValue(nums,7))==nums(1+(indexOfValue(nums,6))))){
                                                                          ^array667:24: error: ')' expected but 'if' found.
if(indexOfValue(nums,6)==(-1)){
^